tests/fixtures/LatestTests/ConstVariableDeclarationTests/errors/uninitialized_use_before_declare_char.fg
/; EXPECT_ERROR: VariableNotFound
print(x, "\n")
const x:char = 'a'

